--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kottans test-task</title>
-    <meta name="author" content="Yarik Genza">
+    <meta name="author" content="Yarik Genza (gsmart)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
@@ -14,7 +14,6 @@
    <div class="head">
      <h1>Pokedex</h1>
    </div>
-    
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-5">
