--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <div id="list"></div> 
       </div>
       <div class="col-md-7">
-          <div id="single"></div>
+          <div id="single">
+              <div class="loader single-loader" style="display: none"></div>
+          </div>
       </div>
     </div>
     <div id="scroller">
